feat: updated ui
